force-app/main/default/objects/Notification_Parameter__c/Notification_Parameter__c.object-meta.xml
<CustomObject>
    <label>Notification Parameter</label>
    <nameField>
        <displayFormat>NP-{0000000}</displayFormat>
        <label>Notification Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>