force-app/main/default/objects/Notification_Parameter__c/fields/LongValue2__c.field-meta.xml
<CustomField>
    <fullName>LongValue2__c</fullName>
    <label>LongValue2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>