force-app/main/default/objects/Notification_Parameter__c/fields/LongValue__c.field-meta.xml
<CustomField>
    <fullName>LongValue__c</fullName>
    <label>LongValue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>