force-app/main/default/objects/Notification_Parameter__c/fields/Notification_Name__c.field-meta.xml
<CustomField>
    <fullName>Notification_Name__c</fullName>
    <formula>Notification__r.Name</formula>
    <label>Notification Name</label>
    <type>Text</type>
</CustomField>