force-app/main/default/objects/Notification_Parameter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>INTEGER</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
                <label>Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>